--- a/src/global.scss
+++ b/src/global.scss
@@ -137,3 +137,9 @@ ion-note{
     padding: 0;
   }
 }
+
+.vertical-align-center {
+     display: flex!important;
+     align-content: center!important;
+     align-items: center!important;
+}
