--- a/src/app/nav/footer/footer.component.html
+++ b/src/app/nav/footer/footer.component.html
@@ -12,10 +12,13 @@
           <a [href]="instagramUrl" target="_blank" class="ion-margin-end"><ion-icon [color]="aspecto == false ? 'light' : 'dark'" name="logo-instagram">Instagram </ion-icon> </a>
           <a [href]="faceUrl" target="_blank" class="ion-margin-end"><ion-icon [color]="aspecto == false ? 'light' : 'dark'" name="logo-facebook">Facebook </ion-icon></a>
           <a href="mailto:{{mailUrl}}" target="_blank" class="ion-margin-end"><ion-icon [color]="aspecto == false ? 'light' : 'dark'" name="mail"> E-mail</ion-icon></a>
+          
         </ion-row>
        
       </ion-col>
-      
+      <ion-col size="auto">
+        <span><small>v{{version}}</small></span>
+      </ion-col>
      
     </ion-row>
   </ion-grid>
