Se agrega espacio en blanco entre nombre de usuario y nombre completo (en seccion concursante)

--- a/src/app/concursos/concurso-detail/concursantes/concursantes.component.html
+++ b/src/app/concursos/concurso-detail/concursantes/concursantes.component.html
@@ -115,7 +115,7 @@
                             <ion-col size="8" size-sm="8.2">
                               <ion-label class="ion-margin-start">
                                 <ion-card-subtitle title="Username">
-                                  <i>@{{ m.profile.user.username }}</i>
+                                  <i>@{{ m.profile.user.username }}</i> &nbsp;
                                   <ion-text title="Nombre">
                                     <b>{{ m.profile.name }} {{ m.profile.last_name }}</b>
                                   </ion-text>
