Se agrega boton para descarga de archivo comprimido de fotografias; Se hace peticion a backend

--- a/src/app/concursos/concurso-detail/informacion/informacion.component.html
+++ b/src/app/concursos/concurso-detail/informacion/informacion.component.html
@@ -78,6 +78,9 @@
             <ion-button  *ngIf="!isInscripto; else btnUnsuscribe" size="small" (click)="inscribirConcursante()"
               >Inscribirme!</ion-button>
 
+            <ion-button  *ngIf="(rolificador.esDelegado(u) || rolificador.isAdmin(u))" size="small" (click)="descargarFotografias()"
+              >Descargar Fotografías</ion-button>
+
             <ion-button  size="small" 
               (click)="compartir()">
               <ion-icon name="share-social-outline"></ion-icon>
