--- a/src/app/concursos/concurso-detail/informacion/informacion.component.html
+++ b/src/app/concursos/concurso-detail/informacion/informacion.component.html
@@ -78,7 +78,7 @@
             <ion-button  *ngIf="!isInscripto; else btnUnsuscribe" size="small" (click)="inscribirConcursante()"
               >Inscribirme!</ion-button>
 
-            <ion-button  *ngIf="(rolificador.esDelegado(u) || rolificador.isAdmin(u))" size="small" (click)="descargarFotografias()"
+            <ion-button  *ngIf="rolificador.isAdmin(u)" size="small" (click)="descargarFotografias()"
               >Descargar Fotografías</ion-button>
 
             <ion-button  size="small" 
