En componente de fecha se agrega selector de minutos y horas, en vistas se modifica formato de fecha y se agrega visualización de horas y minutos

--- a/src/app/concursos/concurso-detail/informacion/informacion.component.html
+++ b/src/app/concursos/concurso-detail/informacion/informacion.component.html
@@ -13,8 +13,8 @@
             </ion-row>
             <ion-row class="">
               <ion-card-subtitle>
-                Desde {{ fechaInicio | date: "dd-MM-yyyy" }} Hasta
-                {{ fechaFin | date: "dd-MM-yyyy" }}
+                Desde: {{ fechaInicio | date: "dd/MM/yyyy hh:mm" }} - Hasta:
+                {{ fechaFin | date: "dd/MM/yyyy hh:mm" }}
               </ion-card-subtitle>
             </ion-row>
           </ion-col>
