--- a/src/app/concursos/concursos.page.html
+++ b/src/app/concursos/concursos.page.html
@@ -174,8 +174,8 @@
                           </ion-col>
                         </ion-row>
                         <ion-card-subtitle [color]="aspecto == false ? 'light' : 'dark'" 
-                          >Desde {{c.start_date | date:'dd-MM-yyyy' }} Hasta
-                          {{c.end_date | date:'dd-MM-yyyy' }}</ion-card-subtitle
+                          >Desde: {{c.start_date | date:'dd/MM/yyyy hh:mm' }} - Hasta:
+                          {{c.end_date | date:'dd/MM/yyyy hh:mm' }}</ion-card-subtitle
                         >
                       </ion-card-header>
                       <!-- <ion-img [src]="concurso.thumbnailUrl"></ion-img> -->
