Se corrige texto en formulario de cambiar contraseña

--- a/src/app/usuario/usuarios-abm/usuario-post/change-password/change-password.component.html
+++ b/src/app/usuario/usuarios-abm/usuario-post/change-password/change-password.component.html
@@ -30,7 +30,7 @@
               <ion-col class="ion-no-padding">
                 <ion-row>
                   <ion-col class="ion-no-padding" size="10">
-                    <ion-label position="floating">Contraseña</ion-label>
+                    <ion-label position="floating">Contraseña actual</ion-label>
                     <ion-input
                       (ionFocus)="passChangeFocus = true"
                       (ionBlur)="passChangeFocus = false"
