--- a/src/global.scss
+++ b/src/global.scss
@@ -143,3 +143,8 @@ ion-note{
      align-content: center!important;
      align-items: center!important;
 }
+
+.modal-default{
+  --height: 80vh !important;
+  --width: 80vw !important;
+}
