--- a/src/app/concursos/concurso-detail/ver-fotografias/ver-fotografias.component.html
+++ b/src/app/concursos/concurso-detail/ver-fotografias/ver-fotografias.component.html
@@ -1,4 +1,4 @@
-<div [ngClass]="responsiveService.isDesktop ? 'ion-page' : ''">
+<div [ngClass]="responsiveService.isDesktop ? 'ion-page' : ''" style="height: 1000px">
   <ion-header>
     <ion-toolbar>
       <ion-row class="ion-align-items-center ion-margin-end ">
