--- a/src/global.scss
+++ b/src/global.scss
@@ -144,7 +144,7 @@ ion-note{
      align-items: center!important;
 }
 
-.modal-default{
-  --height: 80vh !important;
-  --width: 80vw !important;
+.modal-fullscreen{
+  --height: 80vh100vh !important;
+  --width: 80vw100vw !important;
 }
