--- a/src/app/concursos/concurso-detail/ver-fotografias/ver-fotografias.component.scss
+++ b/src/app/concursos/concurso-detail/ver-fotografias/ver-fotografias.component.scss
@@ -1,3 +1,15 @@
 .vw-80{
     min-width: 80vw;
 }
+
+.cont-ver-foto{
+    height: calc(100lvh - 58px);
+    width: 100%;
+    /* border: 1px solid #000; */
+    overflow: scroll;
+}
+
+.img-det-modal{
+    width: 100%;
+    height: auto;
+}
