funcionalidad de galeria al mismo nivel que la desarrollada en rama GALERIA_IMG

--- a/src/global.scss
+++ b/src/global.scss
@@ -145,6 +145,6 @@ ion-note{
 }
 
 .modal-fullscreen{
-  --height: 80vh100vh !important;
-  --width: 80vw100vw !important;
+  --height: 100vh !important;
+  --width: 100vw !important;
 }
