--- a/src/app/concursos/concurso-detail/ver-fotografias/ver-fotografias.component.html
+++ b/src/app/concursos/concurso-detail/ver-fotografias/ver-fotografias.component.html
@@ -11,8 +11,18 @@
           </ion-button>
         </ion-col>
         <ion-col [ngClass]="{'ion-margin-start': responsiveService.isDesktop}">
-          <h5 class="ion-text-wrap">{{image.image.title}} - {{image?.image.code}} - {{image?.section?.name}} - 
-          {{getFullName(image?.image.profile_id)}} - {{ image.metric.prize != '0' && image.metric.prize != null && image.metric.prize != undefined ? image.metric.prize : '-' }}</h5>
+          <h5 class="ion-text-wrap">
+            {{all_data[index].image.title}} - {{all_data[index]?.image.code}} - {{all_data[index]?.section?.name}} - 
+            {{getFullName(all_data[index]?.image.profile_id)}} - {{ all_data[index].metric.prize != '0' 
+            && all_data[index].metric.prize != null && all_data[index].metric.prize != undefined ? all_data[index].metric.prize : '-' }}</h5>
+        </ion-col>
+        <ion-col size="auto">
+          <ion-button (click)="anterior()" fill="clear" class="">
+            <ion-icon name="chevron-back-outline"></ion-icon>
+          </ion-button>
+          <ion-button (click)="siguiente()" fill="clear" class="">
+            <ion-icon name="chevron-forward-outline"></ion-icon>
+          </ion-button>
         </ion-col>
         <ion-col size="1" class="ion-hide-md-down">
           <ion-button (click)="modalController.dismiss()" fill="clear" class="">
@@ -32,14 +42,16 @@
               <ng-template #noImg> 
                 <ion-text color="dark">No se encuentra una fotografía cargada</ion-text>
               </ng-template>
-              <ion-row class="ion-padding-top">
+              <ion-row class="ion-padding-top ion-justify-content-center ion-align-self-center">
+                <ion-col size="auto">
+                    <img 
+                    (ionError)="yepImg = false"
+                    *ngIf="yepImg==true; else noImg" 
+                    [src]="all_data[index].image.url != null ? configService.apiUrl(all_data[index].image.url) : ''"
+                    class="img-det-modal"
+                  />
+                </ion-col>
                 
-                <img 
-                  (ionError)="yepImg = false"
-                  *ngIf="yepImg==true; else noImg" 
-                  [src]="image.image.url != null ? configService.apiUrl(image.image.url) : ''"
-                  class="img-det-modal"
-                />
               </ion-row>
             </ion-col>
           </ion-row>
