--- a/src/app/concursos/concurso-detail/concursantes/concursantes.component.html
+++ b/src/app/concursos/concurso-detail/concursantes/concursantes.component.html
@@ -82,7 +82,7 @@
   
                       <ion-row>
                         <app-th-sort
-                          [sortFn]="ordenarPorFotoclub" [(data)]="inscriptos" title="Fotoclub/Agrupación"
+                          [sortFn]="ordenarPorFotoclub" [(data)]="inscriptos" title="Fotoclub/Agrupación/Institución"
                         ></app-th-sort>
                       </ion-row>
                     </ion-col>
