--- a/src/app/concursos/concurso-detail/fotografias.html
+++ b/src/app/concursos/concurso-detail/fotografias.html
@@ -27,7 +27,7 @@
               </ion-item>
 
               <ion-item lines="none">
-                <ion-label>Fotoclub/Agrupación</ion-label>
+                <ion-label>Fotoclub/Agrupación/Institución</ion-label>
                 <ion-radio slot="start" value="fotoclub"></ion-radio>
               </ion-item>
             </ion-radio-group>
