--- a/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
+++ b/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
@@ -158,7 +158,7 @@
                                 <ion-col class="ion-hide-md-down ion-align-self-center" size="5" size-md="4">
                                   <ion-item lines="none">
                                     <ion-label>
-                                      <ion-card-subtitle title="Fotoclub/Agrupación del autor">{{getFotoclubName(r.image.profile_id)}}</ion-card-subtitle>
+                                      <ion-card-subtitle title="Fotoclub/Agrupación/Institución del autor">{{getFotoclubName(r.image.profile_id)}}</ion-card-subtitle>
                                       <ion-text title="Autor de la obra">
                                         <b>{{ getFullName(r.image.profile_id) }}</b>
                                       </ion-text>
