Se define el texto por defecto de los botones de los selectores

--- a/src/app/concursos/concurso-detail/concursantes/concursantes.component.html
+++ b/src/app/concursos/concurso-detail/concursantes/concursantes.component.html
@@ -44,7 +44,7 @@
                   </ion-button>
                   <ion-item >
                     <ion-label position="stacked">Categoría</ion-label>
-                    <ion-select
+                    <ion-select okText="Aceptar" cancelText="Cancelar"
                       [(ngModel)]="categoriaSeleccionada"
                       interface="popover">
                       <ion-select-option
