--- a/src/app/concursos/metricas-abm/metricas-post/metricas-post.component.html
+++ b/src/app/concursos/metricas-abm/metricas-post/metricas-post.component.html
@@ -91,7 +91,7 @@
                     <!-- <ion-row class="ion-padding-top" *ngIf="typeSubsection">
                       <ion-item class="w-100 ion-margin-bottom">
                         <ion-label position="floating">Sección padre</ion-label>
-                        <ion-select disabled
+                        <ion-select disabled  okText="Aceptar" cancelText="Cancelar"
                           [(ngModel)]="section.parent_id" 
                           name="parent_id" 
                           >
