--- a/src/app/shared/search-bar/search-bar.component.html
+++ b/src/app/shared/search-bar/search-bar.component.html
@@ -14,7 +14,7 @@
         *ngIf="innerSelect"
         (ionChange)="output()"
         interface="popover"
-        class="ion-margin-end"
+        class="ion-margin-end"  okText="Aceptar" cancelText="Cancelar"
         >
         <!-- [(ngModel)]="atributoSelected" -->
         <!-- no funciona ngModel -->
