--- a/src/app/shared/search-select/search-select.component.html
+++ b/src/app/shared/search-select/search-select.component.html
@@ -27,7 +27,7 @@
             >{{ title }}</ion-label
           >
           <ion-select #atributoSelect
-            *ngIf="!updatingSelect"
+            *ngIf="!updatingSelect"  okText="Aceptar" cancelText="Cancelar"
             (ionChange)="changeQuery($event.target)"
             interface="popover"
             [value]="atributoSelectedAsInt"
