--- a/src/app/concursos/concurso-detail/image-review/image-review.page.html
+++ b/src/app/concursos/concurso-detail/image-review/image-review.page.html
@@ -37,7 +37,7 @@
                     <ion-item class="w-100 ion-margin-bottom">
                       <ion-label position="floating">Premio</ion-label>
                      
-                      <ion-select name="elegida" [(ngModel)]="elegida" ngDefaultControl>
+                      <ion-select name="elegida" [(ngModel)]="elegida"  okText="Aceptar" cancelText="Cancelar" ngDefaultControl>
                         <ion-select-option  *ngFor="let met of metricas"  [value]="met">{{ met.prize }}</ion-select-option>
                       </ion-select>
                     </ion-item>
