--- a/src/app/concursos/concurso-detail/inscribir-jueces/inscribir-jueces.component.html
+++ b/src/app/concursos/concurso-detail/inscribir-jueces/inscribir-jueces.component.html
@@ -28,7 +28,7 @@
                 <ion-item class="w-100 ion-margin-bottom">
                   <!-- [position]="(profile_id != undefined) ? 'stacked' : 'floating'" -->
                   <ion-label position="floating">Juez</ion-label>
-                  <ion-select [(ngModel)]="profileContest.profile_id" ngDefaultControl>
+                  <ion-select [(ngModel)]="profileContest.profile_id"  okText="Aceptar" cancelText="Cancelar" ngDefaultControl>
                     <!-- [(value)]="image.profile_id" -->
                     <ion-select-option
                       *ngFor="let p of jueces"
@@ -41,7 +41,7 @@
               <ion-row class="ion-padding-top">
                 <!-- <ion-item class="w-100 ion-margin-bottom">
                   <ion-label position="floating">Categoría</ion-label>
-                  <ion-select [(ngModel)]="profileContest.category_id" ngDefaultControl>
+                  <ion-select [(ngModel)]="profileContest.category_id"  okText="Aceptar" cancelText="Cancelar" ngDefaultControl>
                     <ion-select-option
                       *ngFor="let c of categorias"
                       [value]="c.id"
