--- a/src/app/concursos/concurso-post/concurso-post.page.html
+++ b/src/app/concursos/concurso-post/concurso-post.page.html
@@ -5,7 +5,7 @@
         <ion-col size="12" size-md="11">
           <ion-row>
             <ion-buttons>
-              <ion-back-button defaultHref="/concursos"></ion-back-button>
+              <ion-back-button text="Volver"  defaultHref="/concursos"></ion-back-button>
             </ion-buttons>
             <ion-title>{{formTitle}}</ion-title>
           </ion-row>
