--- a/src/app/concursos/metricas-abm/metricas-post/metricas-post.component.html
+++ b/src/app/concursos/metricas-abm/metricas-post/metricas-post.component.html
@@ -2,10 +2,10 @@
   <ion-header>
     <ion-toolbar>
       <ion-row class="ion-align-items-center ion-margin-end">
-        <!-- <ion-back-button [defaultHref]="'/concursos/' + id"></ion-back-button> -->
-        <!-- <ion-back-button (click)="dismiss()"></ion-back-button> -->
+        <!-- <ion-back-button  text="Volver" [defaultHref]="'/concursos/' + id"></ion-back-button> -->
+        <!-- <ion-back-button text="Volver"  (click)="dismiss()"></ion-back-button> -->
         <ion-col size="2" class="ion-hide-md-up">
-          <!-- <ion-back-button (click)="modalController.dismiss()"></ion-back-button> -->
+          <!-- <ion-back-button  text="Volver" (click)="modalController.dismiss()"></ion-back-button> -->
           <ion-button (click)="modalController.dismiss()" color="dark" fill="clear" class="">
             <ion-icon name="arrow-back-outline"></ion-icon>
           </ion-button>
