--- a/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
+++ b/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
@@ -5,7 +5,7 @@
         <ion-col size="12" size-md="11">
           <ion-row>
             <ion-buttons>
-              <ion-back-button defaultHref="/usuarios"></ion-back-button>
+              <ion-back-button text="Volver" defaultHref="/usuarios"></ion-back-button>
             </ion-buttons>
 
             <ion-title  *ngIf="isLogged(); else registroFuera">{{formTitle}}</ion-title>
