--- a/src/app/concursos/concurso-detail/inscribir-jueces/inscribir-jueces.component.html
+++ b/src/app/concursos/concurso-detail/inscribir-jueces/inscribir-jueces.component.html
@@ -2,8 +2,8 @@
   <ion-header>
     <ion-toolbar>
       <ion-row class="ion-align-items-center ion-margin-end ion-margin-start">
-        <!-- <ion-back-button [defaultHref]="'/concursos/' + id"></ion-back-button> -->
-        <!-- <ion-back-button (click)="dismiss()"></ion-back-button> -->
+        <!-- <ion-back-button text="Volver"  [defaultHref]="'/concursos/' + id"></ion-back-button> -->
+        <!-- <ion-back-button text="Volver"  (click)="dismiss()"></ion-back-button> -->
         <ion-col>
           <h5 class="ion-text-wrap">
             Inscribir Juez a {{ contest.name }}
@@ -87,7 +87,7 @@
                       size="12"
                       size-sm="3"
                     >
-                      <!-- <ion-back-button
+                      <!-- <ion-back-button text="Volver" 
                     text="Cancelar"
                     icon=""
                     (click)="modalController.dismiss()"
