--- a/src/app/notificaciones/notificaciones.page.html
+++ b/src/app/notificaciones/notificaciones.page.html
@@ -5,7 +5,7 @@
         <ion-col size="12" size-md="11">
           <ion-row>
             <ion-buttons>
-              <ion-back-button defaultHref="/concursos" class="ion-hide-md-up"></ion-back-button>
+              <ion-back-button  text="Volver" defaultHref="/concursos" class="ion-hide-md-up"></ion-back-button>
             </ion-buttons>
             <ion-title>Notificaciones</ion-title>
           </ion-row>
