--- a/src/app/usuario/perfil/perfil.page.html
+++ b/src/app/usuario/perfil/perfil.page.html
@@ -5,7 +5,7 @@
         <ion-col size="12" size-md="11">
           <ion-row>
             <ion-buttons>
-              <ion-back-button
+              <ion-back-button  text="Volver" 
                 defaultHref="/"
                 ></ion-back-button>
                 <!-- class="ion-hide-md-up" -->
