Se mejora visualizacion detalle de fotografía, se soluciona bug por el cual en movimles no se veia el detalle si se usaba la opción de menú

--- a/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
+++ b/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
@@ -206,7 +206,7 @@
                                   </ion-buttons>
         
                                   <ion-buttons class="ion-hide-md-up">
-                                    <ion-button (click)="mostrarAcciones($event, r)">
+                                    <ion-button (click)="mostrarAcciones($event, r, i) ">
                                       <ion-icon slot="icon-only" ios="ellipsis-horizontal" md="ellipsis-vertical"></ion-icon>
                                     </ion-button>
                                   </ion-buttons>
