--- a/src/app/concursos/concurso-detail/ver-fotografias/ver-fotografias.component.html
+++ b/src/app/concursos/concurso-detail/ver-fotografias/ver-fotografias.component.html
@@ -12,7 +12,7 @@
         </ion-col>
         <ion-col [ngClass]="{'ion-margin-start': responsiveService.isDesktop}">
           <h5 class="ion-text-wrap">
-            {{all_data[index].image.title}} - {{all_data[index]?.image.code}} </h5>
+            {{all_data[index].image.title}} </h5>
         </ion-col>
         <ion-col size="auto">
           <ion-button (click)="anterior()" fill="clear" class="">
@@ -46,7 +46,7 @@
 
         <ion-col size="auto">
           <p>
-            <b>Título: </b>{{all_data[index].image.title}} 
+            <b>Cod: </b>{{all_data[index]?.image.code}} 
           </p>
           <p>
             <b>Sección:</b> {{all_data[index]?.section?.name}} </p>
