--- a/src/app/concursos/concurso-detail/ver-fotografias/ver-fotografias.component.scss
+++ b/src/app/concursos/concurso-detail/ver-fotografias/ver-fotografias.component.scss
@@ -3,7 +3,7 @@
 }
 
 .cont-ver-foto{
-    height: calc(100lvh - 56px);
+    max-height: calc(100lvh - 56px);
     width: 100%;
     /* border: 1px solid #000; */
     overflow: scroll;
