En vista detalle de concurso se define hora en formato 24hs

--- a/src/app/concursos/concurso-detail/informacion/informacion.component.html
+++ b/src/app/concursos/concurso-detail/informacion/informacion.component.html
@@ -13,8 +13,8 @@
             </ion-row>
             <ion-row class="">
               <ion-card-subtitle>
-                Desde: {{ fechaInicio | date: "dd/MM/yyyy hh:mm" }} - Hasta:
-                {{ fechaFin | date: "dd/MM/yyyy hh:mm" }}
+                Desde: {{ fechaInicio | date: "dd/MM/yyyy HH:mm" }} - Hasta:
+                {{ fechaFin | date: "dd/MM/yyyy HH:mm" }}
               </ion-card-subtitle>
             </ion-row>
           </ion-col>
